@@ -123,6 +123,7 @@
                     scripts/properties/replace_strip_tags.properties
                     scripts/properties/svn_clear_auth.properties
                     scripts/properties/strip_bidi_marks.properties
+                    scripts/properties/nbsp.properties
                     release/mac-specific/OmegaT.app/Contents/Resources/en.lproj/Localizable.strings" />
         </copy>
         <copy file="release/readme.txt"
@@ -154,6 +155,7 @@
                     scripts/properties/replace_strip_tags.properties
                     scripts/properties/svn_clear_auth.properties
                     scripts/properties/strip_bidi_marks.properties
+                    scripts/properties/nbsp.properties
                     release/mac-specific/OmegaT.app/Contents/Resources/en.lproj/Localizable.strings"
                     excludes="doc_src/en/index.xml
                     doc_src/en/html/**
