@@ -1,0 +1,2 @@
+name=Non-breaking space
+description=Replace spaces with non-breakable spaces where appropriate in French
