@@ -1,0 +1,2 @@
+name=Espace ins\u00e9cable
+description=Remplacer les espaces par des espaces ins\u00e9cables lorsque n\u00e9cessaire en fran\u00e7ais
